--- a/Quick-Notes/src/index.css
+++ b/Quick-Notes/src/index.css
@@ -89,3 +89,11 @@ body {
   background-color: rgb(113 113 122);
 }
 
+@keyframes shine {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
